# stepvr-openvr-detour

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  detour_controller_state.cpp  dllmain.cpp  shared.cpp  shared.h
.github/workflows/: build-windows.yml
hooking_library/: detour_controller_state.cpp  detour_controller_state.h  detour_input.cpp  detour_input.h  dllmain.cpp  forward_ingress.cpp  forward_ingress.h  shared.cpp  shared.h
injector/: main.cpp
launcher/: main.cpp
writer/: main.cpp
